[package]
name = "enum-collections-macros"
version = "2.0.0"
edition = "2024"

description = "Macros for the enum-collections EnumMap"
authors = ["Pavel Pscheidl <pavel2@pscheidl.cz>"]
readme = "README.md"
repository = "https://github.com/Pscheidl/enum-collections"
license = "Apache-2.0"
keywords = ["collections", "hashmap", "enum"]
categories = ["data-structures"]
documentation = "https://docs.rs/enum-collections-macros"


[lib]
proc-macro = true

[features]
default = []
variants = []

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
