[package]
name = "enum-collections"
version = "0.5.0"
edition = "2021"

description = "Collections data structures optimized for Enum, initializable at runtime."
authors = ["Pavel Pscheidl <pavel2@pscheidl.cz>"]
readme = "../README.md"
repository = "https://github.com/Pscheidl/enum-collections"
license = "Apache-2.0"
keywords = ["collections", "hashmap", "hashtable", "enum", "enummap"]
categories = ["data-structures"]
documentation = "https://docs.rs/enum-collections"

[dependencies]
enum-collections-macros = { version = "0.3.0", path = "../enum-collections-macros" }

[dev-dependencies]
criterion = "0.4.0"
enum-map = "2.4.2"  # Benchmark

[[bench]]
name = "enummap"
harness = false

[[bench]]
name = "enumtable"
harness = false
