[package]
name = "enum-collections"
version = "1.0.1"
edition = "2021"

description = "Collections data structures optimized for Enum, initializable at runtime."
authors = ["Pavel Pscheidl <pavel2@pscheidl.cz>"]
readme = "../README.md"
repository = "https://github.com/Pscheidl/enum-collections"
license = "Apache-2.0"
keywords = ["collections", "hashmap", "hashtable", "enum", "enummap"]
categories = ["data-structures"]
documentation = "https://docs.rs/enum-collections"

[features]
default = ["debug", "eq"]
debug = ["variants"] # Array of all variants must be available at runtime to generate keys in the Debug output
eq = []
variants = ["enum-collections-macros/variants"]

[dependencies]
enum-collections-macros = { path = "../enum-collections-macros", version = "1.0.0" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "enummap"
harness = false
