[package]
name = "enum-collections"
version = "1.4.1"
edition = "2021"

description = "Collections data structures optimized for Enum, initializable at runtime."
authors = ["Pavel Pscheidl <pavel2@pscheidl.cz>"]
readme = "../README.md"
repository = "https://github.com/Pscheidl/enum-collections"
license = "Apache-2.0"
keywords = ["collections", "hashmap", "hashtable", "enum", "enummap"]
categories = ["data-structures"]
documentation = "https://docs.rs/enum-collections"

[features]
default = ["debug", "eq"]
# `std::fmt::Debug` implementation for EnumMap. Requires keys to be `Debug` as well.
debug = ["variants"] # Array of all variants must be available at runtime to generate keys in the Debug output
# `std::cmp::Eq` implementation for EnumMap. Requires keys to be `Eq` as well.
eq = []
# Generates a static array of all variants for the EnumMap. This is required for the `Debug` implementation.
variants = ["enum-collections-macros/variants"]
# Implementations of the `Enumerated` trait for common data types.
ext=[]

[dependencies]
enum-collections-macros = { path = "../enum-collections-macros", version = "1.0.1" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "enummap"
harness = false
